@@ -4,65 +4,83 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>com.chernenkov.gwtTest</groupId>
     <artifactId>gwtTest</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <url>http://example.com</url> <!--what this tag does? -->
-    <!--<packaging>war</packaging> --> <!-- output is ear file; pom for packaging multiple  -->
+    <packaging>ear</packaging>
 
     <properties>
-        <gwtVersion>2.7.0</gwtVersion>
-        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <tomcat.webport>8090</tomcat.webport>
-        <tomcat.ajpport>8009</tomcat.ajpport>
-        <tomcat.context>/parent</tomcat.context>
+        <glassfish.directory>C:\Program Files\Java\glassfish4</glassfish.directory>
     </properties>
 
 
     <build>
-
-       
-
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-                <version>3.1</version>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
                 <version>2.10.1</version>
 
                 <configuration>
-                    <!-- configuration elements goes here -->
-                    <outputDirectory>C:\Program Files\Java\glassfish4\glassfish\domains\domain2\autodeploy</outputDirectory>
+                    <modules>
+                        <webModule>
+                            <groupId>com.chernenkov.gwttest</groupId>
+                            <artifactID>client</artifactID>
+                            <contextRoot>/client/target</contextRoot>
+                        </webModule>
+
+                        <webModule>
+                            <groupId>com.chernenkov.gwttest</groupId>
+                            <artifactID>server</artifactID>
+                            <contextRoot>/server/target</contextRoot>
+                        </webModule>
+                    </modules>
+                    <!--outputDirectory>C:\Program Files\Java\glassfish4\glassfish\domains\domain2\autodeploy</outputDirectory-->
 
                 </configuration>
             </plugin>
 
-
-
-
-
             <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.0</version>
+                <groupId>org.glassfish.maven.plugin</groupId>
+                <artifactId>maven-glassfish-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <id>gf-undeploy</id>
+                        <goals>
+                            <goal>undeploy</goal>
+                        </goals>
+                        <phase>clean</phase>
+                    </execution>
+                    <execution>
+                        <id>gf-deploy</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+
                 <configuration>
-                    <path>${tomcat.context}</path>
-                    <port>${tomcat.webport}</port>
-                    <ajpPort>${tomcat.ajpport}</ajpPort>
-                    <systemProperties>
-                        <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
-                    </systemProperties>
+                    <echo>true</echo>
+                    <user>admin</user>
+                    <adminPassword>admin</adminPassword>
+                    <glassfishDirectory>${glassfish.directory}</glassfishDirectory>
+                    <domainDirectory>${glassfish.directory}/glassfish/domains/</domainDirectory>
+                    <domain>
+                        <name>domain2</name>
+                        <adminPort>4848</adminPort>
+                        <httpPort>8080</httpPort>
+                        <httpsPort>8443</httpsPort>
+                    </domain>
+                    <components>
+                        <component>
+                            <name>gwtTest</name>
+                            <artifact>target/gwtTest-1.0-SNAPSHOT.ear</artifact>
+                        </component>
+                    </components>
                 </configuration>
+
             </plugin>
 
         </plugins>
@@ -70,15 +88,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-user</artifactId>
-            <version>${gwtVersion}</version>
+            <groupId>com.chernenkov.gwtTest</groupId>
+            <artifactId>client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
         </dependency>
+
         <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-servlet</artifactId>
-            <version>${gwtVersion}</version>
-            <scope>provided</scope>  <!-- ??? -->
+            <groupId>com.chernenkov.gwtTest</groupId>
+            <artifactId>server</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
         </dependency>
     </dependencies>
 
